# adk-expert-agent

./: .gitignore  Dockerfile  LICENSE  README.md  a2as.yaml  command.txt  compute-engine-setup.sh  main.py  pyproject.toml  refactor.sh
evalsets/: document_generator_agent_evalset.json  github_issue_processing_agent_evalset.json  mermaid_diagram_orchestrator_agent_evalset.json  mermaid_syntax_generator_agent_evalset.json  mermaid_syntax_verifier_agent_evalset.json  root_agent_evalset.json
expert-agents/: .env.example  Dockerfile  __init__.py  adk_guidance_agent.py  agent.py  browser_agent.py  callbacks.py  config.py  context_loader.py  document_generator_agent.py  github_issue_agent.py  github_issue_fetcher_agent.py  mermaid_tool.py  sequential_issue_processor.py  test.md  test.mmd  tools.py
expert-agents/agents/: __init__.py  diagram_generator_agent.py  document_generator_agent.py  github_issue_processing_agent.py  mermaid_diagram_orchestrator_agent.py  mermaid_syntax_generator_agent.py  mermaid_syntax_verifier_agent.py
expert-agents/data/: google-adk-python-0.5-with-test.txt  google-adk-python-0.5.txt  google-adk-python-1.0.txt  google-adk-python-1.2.0.txt
expert-agents/tools/: __init__.py  adk_guidance_tool.py  clean_github_issue_text_tool.py  construct_github_url_tool.py  extract_github_issue_details_tool.py  github_issue_tool.py  github_utils.py  handle_extraction_result_tool.py  marp_document_tools.py  marp_utils.py  mermaid_to_png_and_upload_tool.py  (+1 more)
gce/: default  env  history.txt  notes.md
webui/: Dockerfile  angular.json  entrypoint.sh  next.config.mjs  nginx.conf  package.json  tailwind.config.ts  tsconfig.json
webui/src/: env.js  (+1 more)
(+49 files in other folders)
