[project]
name = "my-adk-expert-agent"
version = "0.1.0"
description = "ADK Expert Bot using browser-use"
requires-python = ">=3.11"
dependencies = [
    "google-adk==0.5.0",
    "browser-use", # Keep if other parts still use it
    "langchain-google-genai",
    "google-cloud-secret-manager",
    "python-dotenv",
    "google-cloud-storage", # Added dependency
    "pydantic>=2.0" # Ensure pydantic is explicit if needed for Literal, etc.
]

[project.scripts]
# If you had a main entry point for a CLI app, you'd define it here
# e.g., my-agent = "my_adk_expert_agent.cli:main"
